--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ name: BetterWeather
 version: 1.0.0
 description: Improves minecraft's weather system
 load: POSTWORLD
+api-version: 1.16
 
 commands:
   forecast:
